menghapus yg tidk dibutuhkn

--- a/app.json
+++ b/app.json
@@ -5,7 +5,6 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "islamic_kids",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -38,6 +37,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "d21cf594-68c9-47ff-a198-41e2f8ff9368"
+      }
     }
   }
 }
