--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.desymh.islamic_kids"
     },
     "web": {
       "bundler": "metro",
